kubernetes/apps/prod/gotify/gotify/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: gotify
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://${HOST_GOTIFY}.${DOMAIN}"
    gethomepage.dev/description: Monitoring Dashboards.
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: gotify.png
    gethomepage.dev/name: Gotify
    gethomepage.dev/app: gotify
    gethomepage.dev/widget.type: gotify
    gethomepage.dev/widget.url: "https://${HOST_GOTIFY}.${DOMAIN}"
    gethomepage.dev/widget.token: ${HOMEPAGE_GOTIFY_TOKEN}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${HOST_GOTIFY}.${DOMAIN}`)
      services:
        - kind: Service
          name: gotify-headless
          namespace: gotify
          port: 80
  tls:
    secretName: gotify.${DOMAIN}
